fixed alignment issues

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -58,7 +58,7 @@
    }
 
    .container-bottom-half .square-box p{
-      font-size: 0.95rem;
+      font-size: 0.8rem;
    }
 
    .container-bottom-half .square-box{
@@ -112,12 +112,15 @@
    width: 70%;
    min-height: 100%;
    float: left;
+
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-end;
 }
 
 .container-top-half {
    width: 100%;
    padding: 0px;
-   min-height: 40%;
 
    display: flex;
    flex-direction: column;
@@ -126,14 +129,14 @@
 }
 
 .container-bottom-half{
-   min-height: 60%;
+   margin-top: auto;
 }
 
 .temp{
-   padding: 0;
    margin: 0;
 
    position: relative;
+   text-align: center;
    right: -15px;
 }
 
@@ -155,7 +158,7 @@
    border-radius: 10px;
    box-shadow: -5px 5px rgb(0 0 0 / 0.2);
 
-   min-height: 100%;
+   min-height: fit-content;
    background-color: #242b54;
 }
 
@@ -292,17 +295,23 @@
 }
 
 .date-time {
-   padding: 0rem .5rem 0rem .5rem;
    font-size: .9rem;
 
    display: flex;
    align-items: center;
-   gap: 3rem;
-   justify-content: center;
+   justify-content: flex-end;
    flex-direction: row;
-   text-align: center;
 }
 
+.date-time .image-box {
+   margin-left: auto;
+   margin-right: auto;
+
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+}
 
 .date-time h1{
    padding: 0rem;
