--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
 body{
-    min-height: 100vh;
+    height: 100vh;
     padding: 0;
     margin: 0;
 }
 
 .hover-body{
-    min-height: 100%;
+    height: 100%;
     padding: 1.25rem;
     background-color: ghostwhite;
 }
